--- a/examples/02a-python/01-jupyter.ipynb
+++ b/examples/02a-python/01-jupyter.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "Automagic is ON, % prefix IS NOT needed for line magics."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,9 +332,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Time execution of a Python statement or expression.\n",
+       "\n",
+       "The CPU and wall clock times are printed, and the value of the\n",
+       "expression (if any) is returned.  Note that under Win32, system time\n",
+       "is always reported as 0, since it can not be measured.\n",
+       "\n",
+       "This function can be used both as a line and cell magic:\n",
+       "\n",
+       "- In line mode you can time a single-line statement (though multiple\n",
+       "  ones can be chained with using semicolons).\n",
+       "\n",
+       "- In cell mode, you can time the cell body (a directly\n",
+       "  following statement raises an error).\n",
+       "\n",
+       "This function provides very basic timing functionality.  Use the timeit\n",
+       "magic for more control over the measurement.\n",
+       "\n",
+       ".. versionchanged:: 7.3\n",
+       "    User variables are no longer expanded,\n",
+       "    the magic line is always left unmodified.\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       "::\n",
+       "\n",
+       "  In [1]: %time 2**128\n",
+       "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
+       "  Wall time: 0.00\n",
+       "  Out[1]: 340282366920938463463374607431768211456L\n",
+       "\n",
+       "  In [2]: n = 1000000\n",
+       "\n",
+       "  In [3]: %time sum(range(n))\n",
+       "  CPU times: user 1.20 s, sys: 0.05 s, total: 1.25 s\n",
+       "  Wall time: 1.37\n",
+       "  Out[3]: 499999500000L\n",
+       "\n",
+       "  In [4]: %time print 'hello world'\n",
+       "  hello world\n",
+       "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
+       "  Wall time: 0.00\n",
+       "\n",
+       ".. note::\n",
+       "    The time needed by Python to compile the given expression will be\n",
+       "    reported if it is more than 0.1s.\n",
+       "\n",
+       "    In the example below, the actual exponentiation is done by Python\n",
+       "    at compilation time, so while the expression can take a noticeable\n",
+       "    amount of time to compute, that time is purely due to the\n",
+       "    compilation::\n",
+       "\n",
+       "        In [5]: %time 3**9999;\n",
+       "        CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
+       "        Wall time: 0.00 s\n",
+       "\n",
+       "        In [6]: %time 3**999999;\n",
+       "        CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
+       "        Wall time: 0.00 s\n",
+       "        Compiler : 0.78 s\n",
+       "\u001b[0;31mFile:\u001b[0m      /opt/venv/sevgu_1/lib/python3.11/site-packages/IPython/core/magics/execution.py"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# вызов справки Jupyter\n",
     "%time?"
@@ -342,15 +412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 4 µs, total: 10 µs\n",
-      "Wall time: 13.4 µs\n"
+      "CPU times: user 8 µs, sys: 1 µs, total: 9 µs\n",
+      "Wall time: 10.7 µs\n"
      ]
     }
    ],
@@ -361,15 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 348 µs, sys: 224 µs, total: 572 µs\n",
-      "Wall time: 575 µs\n"
+      "CPU times: user 663 µs, sys: 0 ns, total: 663 µs\n",
+      "Wall time: 666 µs\n"
      ]
     }
    ],
@@ -405,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +484,7 @@
        "19"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +518,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -458,7 +528,7 @@
        "17"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +538,7 @@
        "19"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +570,7 @@
        "19"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,14 +648,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01a-jupyter-decor.ipynb  01-jupyter.ipynb  02-python.ipynb\r\n"
+      "01a-jupyter-decor.ipynb  01-jupyter.ipynb  02-python.ipynb\n"
      ]
     }
    ],
@@ -595,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -621,157 +691,99 @@
      "output_type": "stream",
      "text": [
       "Package                   Version\n",
-      "------------------------- ---------------\n",
-      "anyio                     4.2.0\n",
+      "------------------------- --------------\n",
+      "anyio                     4.3.0\n",
       "argon2-cffi               23.1.0\n",
       "argon2-cffi-bindings      21.2.0\n",
       "arrow                     1.3.0\n",
       "asttokens                 2.4.1\n",
+      "async-lru                 2.0.4\n",
       "attrs                     23.2.0\n",
-      "audioread                 3.0.1\n",
+      "Babel                     2.14.0\n",
       "beautifulsoup4            4.12.3\n",
       "bleach                    6.1.0\n",
-      "branca                    0.7.1\n",
       "certifi                   2024.2.2\n",
       "cffi                      1.16.0\n",
       "charset-normalizer        3.3.2\n",
-      "click                     8.1.7\n",
-      "click-plugins             1.1.1\n",
-      "cligj                     0.7.2\n",
-      "comm                      0.2.1\n",
-      "contourpy                 1.2.0\n",
-      "cycler                    0.12.1\n",
-      "debugpy                   1.8.0\n",
+      "comm                      0.2.2\n",
+      "debugpy                   1.8.1\n",
       "decorator                 5.1.1\n",
       "defusedxml                0.7.1\n",
-      "et-xmlfile                1.1.0\n",
       "executing                 2.0.1\n",
       "fastjsonschema            2.19.1\n",
-      "fiona                     1.9.5\n",
-      "folium                    0.15.1\n",
-      "fonttools                 4.47.2\n",
       "fqdn                      1.5.1\n",
-      "geographiclib             2.0\n",
-      "geopandas                 0.14.3\n",
-      "geopy                     2.4.1\n",
-      "graphviz                  0.20.1\n",
-      "greenlet                  3.0.3\n",
-      "h3                        3.7.6\n",
-      "idna                      3.6\n",
-      "imageio                   2.33.1\n",
-      "IProgress                 0.4\n",
-      "ipykernel                 6.29.0\n",
-      "ipython                   8.21.0\n",
-      "ipython-genutils          0.2.0\n",
-      "ipywidgets                8.1.1\n",
+      "h11                       0.14.0\n",
+      "httpcore                  1.0.5\n",
+      "httpx                     0.27.0\n",
+      "idna                      3.7\n",
+      "ipykernel                 6.29.4\n",
+      "ipython                   8.23.0\n",
       "isoduration               20.11.0\n",
       "jedi                      0.19.1\n",
       "Jinja2                    3.1.3\n",
-      "joblib                    1.3.2\n",
+      "json5                     0.9.24\n",
       "jsonpointer               2.4\n",
       "jsonschema                4.21.1\n",
       "jsonschema-specifications 2023.12.1\n",
-      "jupyter_client            8.6.0\n",
-      "jupyter_core              5.7.1\n",
-      "jupyter-events            0.9.0\n",
-      "jupyter_server            2.12.5\n",
-      "jupyter_server_terminals  0.5.2\n",
+      "jupyter_client            8.6.1\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.10.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.13.0\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.1.6\n",
       "jupyterlab_pygments       0.3.0\n",
-      "jupyterlab-widgets        3.0.9\n",
-      "kiwisolver                1.4.5\n",
-      "lazy_loader               0.3\n",
-      "librosa                   0.10.1\n",
-      "llvmlite                  0.42.0\n",
-      "mapclassify               2.6.1\n",
+      "jupyterlab_server         2.26.0\n",
       "MarkupSafe                2.1.5\n",
-      "matplotlib                3.8.2\n",
       "matplotlib-inline         0.1.6\n",
       "mistune                   3.0.2\n",
-      "mpmath                    1.3.0\n",
-      "msgpack                   1.0.7\n",
-      "nbclassic                 1.0.0\n",
-      "nbclient                  0.9.0\n",
-      "nbconvert                 7.14.2\n",
-      "nbformat                  5.9.2\n",
+      "nbclient                  0.10.0\n",
+      "nbconvert                 7.16.3\n",
+      "nbformat                  5.10.4\n",
       "nest-asyncio              1.6.0\n",
-      "networkx                  3.2.1\n",
-      "nltk                      3.8.1\n",
-      "notebook                  6.5.4\n",
-      "notebook_shim             0.2.3\n",
-      "numba                     0.59.0\n",
-      "numpy                     1.26.3\n",
-      "openpyxl                  3.1.2\n",
+      "notebook                  7.1.2\n",
+      "notebook_shim             0.2.4\n",
       "overrides                 7.7.0\n",
-      "packaging                 23.2\n",
-      "pandas                    2.2.0\n",
+      "packaging                 24.0\n",
       "pandocfilters             1.5.1\n",
-      "parso                     0.8.3\n",
+      "parso                     0.8.4\n",
       "pexpect                   4.9.0\n",
-      "pillow                    10.2.0\n",
-      "pip                       23.2.1\n",
+      "pip                       24.0\n",
       "platformdirs              4.2.0\n",
-      "pooch                     1.8.0\n",
-      "prometheus-client         0.19.0\n",
+      "prometheus_client         0.20.0\n",
       "prompt-toolkit            3.0.43\n",
       "psutil                    5.9.8\n",
       "ptyprocess                0.7.0\n",
       "pure-eval                 0.2.2\n",
-      "pyarrow                   15.0.0\n",
-      "pycparser                 2.21\n",
-      "pydot                     2.0.0\n",
-      "pygeos                    0.14\n",
+      "pycparser                 2.22\n",
       "Pygments                  2.17.2\n",
-      "pyodbc                    5.0.1\n",
-      "pyparsing                 3.1.1\n",
-      "pyproj                    3.6.1\n",
-      "python-dateutil           2.8.2\n",
+      "python-dateutil           2.9.0.post0\n",
       "python-json-logger        2.0.7\n",
-      "pytz                      2024.1\n",
       "PyYAML                    6.0.1\n",
       "pyzmq                     25.1.2\n",
-      "referencing               0.33.0\n",
-      "regex                     2023.12.25\n",
+      "referencing               0.34.0\n",
       "requests                  2.31.0\n",
       "rfc3339-validator         0.1.4\n",
       "rfc3986-validator         0.1.1\n",
-      "rpds-py                   0.17.1\n",
-      "Rtree                     1.2.0\n",
-      "scikit-image              0.22.0\n",
-      "scikit-learn              1.4.0\n",
-      "scipy                     1.12.0\n",
-      "Send2Trash                1.8.2\n",
+      "rpds-py                   0.18.0\n",
+      "Send2Trash                1.8.3\n",
       "setuptools                65.5.0\n",
-      "shapely                   2.0.2\n",
       "six                       1.16.0\n",
-      "sniffio                   1.3.0\n",
-      "soundfile                 0.12.1\n",
+      "sniffio                   1.3.1\n",
       "soupsieve                 2.5\n",
-      "soxr                      0.3.7\n",
-      "SQLAlchemy                2.0.25\n",
       "stack-data                0.6.3\n",
-      "sympy                     1.12\n",
-      "terminado                 0.18.0\n",
-      "threadpoolctl             3.2.0\n",
-      "tifffile                  2024.1.30\n",
+      "terminado                 0.18.1\n",
       "tinycss2                  1.2.1\n",
       "tornado                   6.4\n",
-      "tqdm                      4.66.1\n",
-      "traitlets                 5.9.0\n",
-      "types-python-dateutil     2.8.19.20240106\n",
-      "typing_extensions         4.9.0\n",
-      "tzdata                    2023.4\n",
+      "traitlets                 5.14.2\n",
+      "types-python-dateutil     2.9.0.20240316\n",
+      "typing_extensions         4.11.0\n",
       "uri-template              1.3.0\n",
-      "urllib3                   2.2.0\n",
+      "urllib3                   2.2.1\n",
       "wcwidth                   0.2.13\n",
       "webcolors                 1.13\n",
       "webencodings              0.5.1\n",
-      "websocket-client          1.7.0\n",
-      "widgetsnbextension        4.0.9\n",
-      "xlwt                      1.3.0\n",
-      "xyzservices               2023.10.1\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "websocket-client          1.7.0\n"
      ]
     }
    ],
@@ -836,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -850,8 +862,15 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
