--- a/examples/02a-python/01a-jupyter-decor.ipynb
+++ b/examples/02a-python/01a-jupyter-decor.ipynb
@@ -32,6 +32,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install jupyterthemes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,13 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install numpy tqdm\n",
+    "# !pip install iprogress ipywidgets pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35326b7c16c34ea9ac9acdc82d2dbf0e",
+       "model_id": "709cfab793274584a76a299d6baf297d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,13 +394,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6effd2ee11a1490894124347dc6d8578",
+       "model_id": "3a3d160befc0421ba26c8fee41b7fbd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,13 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71c1ed7083e5454284893ec081640bb5",
+       "model_id": "af72716bf9bf42edadee70fce82894f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "340337e592294f98b369caab72c4663a",
+       "model_id": "80b594b53b304c4b9b0240cb90263736",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,13 +499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ead926960c244e73acd97907f1bb69ce",
+       "model_id": "1673f29eb6d245189d48a292513c5c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,13 +539,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ced6d37c357f4d79b49b0a899b25a780",
+       "model_id": "d4ab80cface44e60ac6b9a044dd231a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,13 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00436d429839419daea3a4ced36370b1",
+       "model_id": "f334ee9b68a944c68455270d61df7b06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,7 +587,7 @@
        "TimePicker(value=None, description='Pick a Time', step=60.0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,22 +603,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mTimePicker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Display a widget for picking times.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "\n",
+       "value: datetime.time\n",
+       "    The current value of the widget.\n",
+       "\n",
+       "disabled: bool\n",
+       "    Whether to disable user changes.\n",
+       "\n",
+       "min: datetime.time\n",
+       "    The lower allowed time bound\n",
+       "\n",
+       "max: datetime.time\n",
+       "    The upper allowed time bound\n",
+       "\n",
+       "step: float | 'any'\n",
+       "    The time step to use for the picker, in seconds, or \"any\"\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       "\n",
+       ">>> import datetime\n",
+       ">>> import ipydatetime\n",
+       ">>> time_pick = ipydatetime.TimePicker()\n",
+       ">>> time_pick.value = datetime.time(12, 34, 3)\n",
+       "\u001b[0;31mInit docstring:\u001b[0m Public constructor\n",
+       "\u001b[0;31mFile:\u001b[0m           /opt/venv/sevgu_1/lib/python3.11/site-packages/ipywidgets/widgets/widget_time.py\n",
+       "\u001b[0;31mType:\u001b[0m           MetaHasTraits\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "TimePicker?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f1f928e515642259f20ebafc6e60357",
+       "model_id": "ae48913d510f436c88f0a5cf7849e7ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -630,13 +691,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ce58c3696643988e7c5779abd7ae32",
+       "model_id": "0d9da8b7f41e443f9f9d2f5d09e967ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,13 +727,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2d82dd4673d45e1803e65134241dac1",
+       "model_id": "bf1e9c5aa9f54fbb85ade057444403aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -701,13 +762,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1c9f0c314cd476ba6a270dd0409f08a",
+       "model_id": "b8df1d4d8e584be6b08c867490981405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -721,7 +782,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14c963989c254e0ca5f3b932b3387fdd",
+       "model_id": "d04fc16669b645e1bebe34859b1c6da5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -758,13 +819,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac939866cb0a492791eb6c52f5922d5f",
+       "model_id": "de50abdaf3804da481ece52867ea6905",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,13 +852,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c7871c983954e3a8e0ddb7a391c4b21",
+       "model_id": "2de4fcd0952e44f494b2e7a6a25753d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,13 +881,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44b14b3f32cc46c2b5532d9af657783c",
+       "model_id": "a474b0b862a046cd835ff1fb198d1205",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -887,6 +948,13 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
