--- a/examples/22-time-series/02-sarima.ipynb
+++ b/examples/22-time-series/02-sarima.ipynb
@@ -187,14 +187,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1951-02</td>\n",
-       "      <td>150</td>\n",
+       "      <th>101</th>\n",
+       "      <td>1957-06</td>\n",
+       "      <td>422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>1955-02</td>\n",
-       "      <td>233</td>\n",
+       "      <th>40</th>\n",
+       "      <td>1952-05</td>\n",
+       "      <td>183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
@@ -206,10 +206,10 @@
        "</div>"
       ],
       "text/plain": [
-       "      Month  #Passengers\n",
-       "25  1951-02          150\n",
-       "73  1955-02          233\n",
-       "77  1955-06          315"
+       "       Month  #Passengers\n",
+       "101  1957-06          422\n",
+       "40   1952-05          183\n",
+       "77   1955-06          315"
       ]
      },
      "metadata": {},
@@ -260,16 +260,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1956-07-01</th>\n",
-       "      <td>413</td>\n",
+       "      <th>1953-08-01</th>\n",
+       "      <td>272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1957-11-01</th>\n",
-       "      <td>305</td>\n",
+       "      <th>1953-04-01</th>\n",
+       "      <td>235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1949-07-01</th>\n",
-       "      <td>148</td>\n",
+       "      <th>1949-01-01</th>\n",
+       "      <td>112</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,9 +278,9 @@
       "text/plain": [
        "            #Passengers\n",
        "ts                     \n",
-       "1956-07-01          413\n",
-       "1957-11-01          305\n",
-       "1949-07-01          148"
+       "1953-08-01          272\n",
+       "1953-04-01          235\n",
+       "1949-01-01          112"
       ]
      },
      "metadata": {},
@@ -825,7 +825,7 @@
       "  F =  -1.7378269898280556     \n",
       "\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT                 \n",
-      "CPU times: user 17.4 s, sys: 9.09 ms, total: 17.4 s\n",
+      "CPU times: user 17.4 s, sys: 56.7 ms, total: 17.4 s\n",
       "Wall time: 2.97 s\n"
      ]
     },
@@ -872,7 +872,7 @@
       "Dep. Variable:                                   bcx   No. Observations:                  132\n",
       "Model:             SARIMAX(11, 1, 8)x(1, 1, [1], 12)   Log Likelihood                 229.393\n",
       "Date:                               Wed, 24 Apr 2024   AIC                           -414.786\n",
-      "Time:                                       14:05:23   BIC                           -353.646\n",
+      "Time:                                       14:21:27   BIC                           -353.646\n",
       "Sample:                                   01-01-1949   HQIC                          -389.959\n",
       "                                        - 12-01-1959                                         \n",
       "Covariance Type:                                 opg                                         \n",
@@ -942,7 +942,7 @@
     "start,end  = len(train), len(train)+len(test)-1\n",
     "\n",
     "# - выполняем обратные преобразования (дифференцирование,логарифмирование) для выдачи прогноза\n",
-    "predicticted = inv_boxcox( model.predict(start, end), 0 )"
+    "predicted = inv_boxcox( model.predict(start, end), 0 )"
    ]
   },
   {
@@ -965,7 +965,7 @@
     "fig,ax = plt.subplots(figsize = (9,3))\n",
     "ax.plot(train['#Passengers'], color = 'blue',label='учебная выборка')\n",
     "ax.plot(test['#Passengers'], color = 'red',label='тестовая выборка')\n",
-    "ax.plot(predicticted, color = 'green',  label='прогноз')\n",
+    "ax.plot(predicted, color = 'green',  label='прогноз')\n",
     "\n",
     "ax.set_xlabel('Месяцы', )\n",
     "ax.set_ylabel('Количество пассажиров',)\n",
@@ -990,7 +990,7 @@
     "from scipy.special import inv_boxcox\n",
     "\n",
     "start,end  = 0, len(df)\n",
-    "predicticted = inv_boxcox( model.predict(start, end), 0 )"
+    "predicted = inv_boxcox( model.predict(start, end), 0 )"
    ]
   },
   {
@@ -999,7 +999,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "err = df['#Passengers'] - predicticted"
+    "err = df['#Passengers'] - predicted"
    ]
   },
   {
@@ -1010,7 +1010,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a7c0ff20ad0>"
+       "<matplotlib.legend.Legend at 0x755a3033b290>"
       ]
      },
      "execution_count": 30,
@@ -1031,7 +1031,7 @@
    "source": [
     "fig,ax = plt.subplots(2,1,figsize = (9,6),sharex=True)\n",
     "ax[0].plot(df[15:]['#Passengers'], color = 'blue',label='тестовая выборка')\n",
-    "ax[0].plot(predicticted[15:], color = 'red',label='прогноз')\n",
+    "ax[0].plot(predicted[15:], color = 'red',label='прогноз')\n",
     "ax[0].grid()\n",
     "ax[0].legend()\n",
     "ax[1].plot(err[15:], color = 'orange',label='остаток')\n",
@@ -1085,7 +1085,7 @@
    "source": [
     "# построим прогноз на три года вперед\n",
     "start, end = len(train), (len(df)-1)+3*12\n",
-    "predicticted = inv_boxcox( model.predict(start, end), 0 )"
+    "predicted = inv_boxcox( model.predict(start, end), 0 )"
    ]
   },
   {
@@ -1107,7 +1107,7 @@
    "source": [
     "fig,ax = plt.subplots(figsize = (9,3))\n",
     "ax.plot(df['#Passengers'], color = 'blue',label='данные')\n",
-    "ax.plot(predicticted, color = 'red',label='прогноз на будущее')\n",
+    "ax.plot(predicted, color = 'red',label='прогноз на будущее')\n",
     "ax.set_xlabel('Месяцы', )\n",
     "ax.set_ylabel('Количество пассажиров',)\n",
     "ax.set_title('Перевозки пассажиров с 1949 по 1960 год', )\n",
