--- a/lab/07-time-series/01-time-series.ipynb
+++ b/lab/07-time-series/01-time-series.ipynb
@@ -143,7 +143,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import boxcox\n",
+    "from scipy.special import boxcox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# df['bcx'] = boxcox( df['values'],0 )"
    ]
   },
@@ -246,7 +254,7 @@
    "outputs": [],
    "source": [
     "from statsmodels.tsa.stattools import adfuller\n",
-    "adf_test = adfuller(df['values'])\n",
+    "adf_test = adfuller(df['bcx'])\n",
     "print('p-value = ' + str(adf_test[1]))"
    ]
   },
@@ -267,9 +275,9 @@
    "source": [
     "# дифференцирование\n",
     "df['dif'] = (\n",
-    "    df['bcx'] \n",
-    "    #.diff()\n",
-    "    #.diff(S)\n",
+    "    df['bcx']  \n",
+    "    # здесь определить количество итераций дифференцирования ряда\n",
+    "    # .diff()\n",
     ")\n",
     "\n",
     "adf_test = adfuller(df['dif'].fillna(0.))\n",
@@ -282,7 +290,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(3,1, figsize = (7,6),sharex=True)\n",
+    "d = ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# сезонное дифференцирование\n",
+    "df['dif_s'] = (\n",
+    "    df['bcx'] \n",
+    "     # здесь определить количество итераций сезонного дифференцирования ряда\n",
+    "     #.diff(S)\n",
+    ")\n",
+    "\n",
+    "adf_test = adfuller(df['dif_s'].fillna(0.))\n",
+    "print('p-value = ' + str(adf_test[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D = ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(4,1, figsize = (7,7),sharex=True)\n",
     "ax[0].plot(df['values'], label = 'данные', color = 'steelblue')\n",
     "ax[0].legend(title = '', loc = 'upper left', )\n",
     "ax[0].grid()\n",
@@ -293,17 +350,11 @@
     "\n",
     "ax[2].plot(df['dif'], label = 'boxcox+dif', color = 'orange')\n",
     "ax[2].legend(title = '', loc = 'upper left', )\n",
-    "ax[2].grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# выбираем количество шагов дифференцирования\n",
-    "d,D = ?, ?"
+    "ax[2].grid()\n",
+    "\n",
+    "ax[3].plot(df['dif_s'], label = 'boxcox+dif_s', color = 'magenta')\n",
+    "ax[3].legend(title = '', loc = 'upper left', )\n",
+    "ax[3].grid()"
    ]
   },
   {
@@ -313,6 +364,35 @@
     "__3. анализируем автокорреляции__\n",
     "\n",
     "подбираем p,q и P,Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.graphics.tsaplots import plot_acf,plot_pacf\n",
+    "n_lags = S+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(figsize=(5,3))\n",
+    "plot_acf(df['dif'].fillna(0.),lags=range(n_lags),ax=ax)\n",
+    "ax.plot([S,S],[-1,1],color='red',linestyle='dashed',alpha=.5)\n",
+    "ax.grid()"
    ]
   },
   {
@@ -328,8 +408,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.graphics.tsaplots import plot_acf,plot_pacf\n",
-    "n_lags = S+1"
+    "q = ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -338,19 +424,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(figsize=(10,3))\n",
-    "plot_acf(df['dif'].fillna(0.),lags=range(n_lags),ax=ax)\n",
+    "fig,ax = plt.subplots(figsize=(5,3))\n",
+    "plot_pacf(df['dif'].fillna(0.),lags=range(n_lags),ax=ax)\n",
     "ax.plot([S,S],[-1,1],color='red',linestyle='dashed',alpha=.5)\n",
     "ax.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = ?"
    ]
   },
   {
@@ -366,10 +443,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(figsize=(10,3))\n",
-    "plot_pacf(df['dif'].fillna(0.),lags=range(n_lags),ax=ax)\n",
-    "ax.plot([S,S],[-1,1],color='red',linestyle='dashed',alpha=.5)\n",
-    "ax.grid()"
+    "p = ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -378,7 +459,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = ?"
+    "n_ses_lags = 8\n",
+    "\n",
+    "lags = np.arange(1*S,n_lags*S,S)\n",
+    "fig,ax = plt.subplots(figsize=(10,3))\n",
+    "plot_acf(df['dif_s'].fillna(0.),lags=lags,ax=ax)\n",
+    "ax.grid()"
    ]
   },
   {
@@ -394,20 +480,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_lags = 8\n",
-    "\n",
-    "lags = np.arange(1*S,n_lags*S,S)\n",
-    "fig,ax = plt.subplots(figsize=(10,3))\n",
-    "plot_acf(df['dif'].fillna(0.),lags=lags,ax=ax)\n",
-    "ax.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "Q = ?"
    ]
   },
@@ -415,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P - номер последнего сезонного лага, при котором __частичной автокорреляция__ значима, но меньше длинны сезона ;   "
+    "---"
    ]
   },
   {
@@ -424,10 +496,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lags = np.arange(1*S,n_lags*S,S)\n",
+    "lags = np.arange(1*S,n_ses_lags*S,S)\n",
     "fig,ax = plt.subplots(figsize=(10,3))\n",
-    "plot_pacf(df['dif'].fillna(0.),lags=lags,ax=ax)\n",
+    "plot_pacf(df['dif_s'].fillna(0.),lags=lags,ax=ax)\n",
     "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P - номер последнего сезонного лага, при котором __частичной автокорреляция__ значима, но меньше длинны сезона ;   "
    ]
   },
   {
@@ -452,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.index.min(), df.index.max()"
+    "display( df.index.min(), df.index.max() )"
    ]
   },
   {
@@ -462,8 +541,8 @@
    "outputs": [],
    "source": [
     "# разобьём данные на обучающую и тестовую выборки\n",
-    "train = df[:'1972-12']\n",
-    "test = df['1973-01':]"
+    "train = df[:'1974-12']\n",
+    "test = df['1975-01':]"
    ]
   },
   {
@@ -506,14 +585,14 @@
     "\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "\n",
-    "\n",
     "model = SARIMAX(\n",
     "        train['bcx'], \n",
     "        order = (p, d, q),\n",
     "        seasonal_order = (P, D, Q, S)\n",
-    "    ).fit()\n",
+    "    ).fit(method='lbfgs')\n",
     "    \n",
-    "    # method='cg', ) #    method='lbfgs',full_output=False)"
+    "    # method='cg', ) \n",
+    "    # method='lbfgs',full_output=False)"
    ]
   },
   {
@@ -635,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_skip = 12\n",
+    "n_skip = 12*4\n",
     "\n",
     "fig,ax = plt.subplots(2,1,figsize = (9,6),sharex=True)\n",
     "ax[0].plot(train[n_skip:]['values'], color = 'blue',label='учебная выборка')\n",
@@ -665,6 +744,46 @@
     "plot_acf(err.fillna(0.))\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# строим прогноз"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_periods = S*4 # на 4 сезона вперед\n",
+    "forecast = model.get_forecast(steps=forecast_periods)\n",
+    "forecast_mean = forecast.predicted_mean # значение прогноза\n",
+    "forecast_ci = forecast.conf_int() # предсказательный интервал"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(figsize=(9,5))\n",
+    "ax.plot(train['values'], label='данные')\n",
+    "ax.plot(forecast_mean, label='прогноз', color='red')\n",
+    "ax.fill_between(\n",
+    "        forecast_ci.index, \n",
+    "        forecast_ci.iloc[:, 0], \n",
+    "        forecast_ci.iloc[:, 1], \n",
+    "        color='pink', \n",
+    "        label='предсказательный интервал'\n",
+    "    )\n",
+    "ax.set_xlabel(\"Date\")\n",
+    "ax.legend(loc='upper left')\n",
+    "ax.grid()"
    ]
   },
   {
