--- a/examples/22-time-series/04-sarima.ipynb
+++ b/examples/22-time-series/04-sarima.ipynb
@@ -1090,7 +1090,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
